# revenue_os

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  start.sh
backend/: README.md  pyproject.toml
backend/app/: main.py
backend/app/api/routes/: accounts.py  auth.py  calls.py  coaching.py  dashboard.py  outreach.py  prospecting.py  sequences.py  settings.py  signals.py  voice.py  workflows.py
backend/app/core/: auth.py  bootstrap.py  config.py  db.py  llm.py  logging.py  seed_data.py  tasks.py
backend/app/integrations/: brightdata.py  brightdata_mock.py  cognee_client.py  livekit_client.py  speechmatics_client.py  trigger_client.py
backend/app/services/: auth_service.py  coaching.py  copilot.py  dashboard.py  memory.py  outreach.py  personalization.py  prospecting.py  research.py  scoring.py  sequences.py  signal_extraction.py  voice.py  workflows.py
backend/scripts/: apply_0009_app_auth.py
backend/tests/: test_api.py
docs/: ARCHITECTURE.md  DEMO.md  SPONSORS.md
frontend/: .env.local.example  next.config.mjs  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/lib/: api.ts  (+2 more)
scripts/: dev.sh
supabase/: README.md
supabase/migrations/: 0001_extensions_and_core.sql  0002_accounts_contacts.sql  0003_signals_sources_scores.sql  0004_sequences_outreach.sql  0005_calls_coaching.sql  0006_workflows_tasks.sql  0007_functions_triggers_views.sql  0008_rls_policies.sql  0009_app_auth.sql
supabase/seed/: demo_seed.sql
trigger/: README.md  package-lock.json  package.json  trigger.config.ts  tsconfig.json
(+29 files in other folders)
