[project]
name = "revenueos-backend"
version = "0.1.0"
description = "RevenueOS — AI-native GTM workspace backend (FastAPI)"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
    "anthropic>=0.40",
    "supabase>=2.9",
    "asyncpg>=0.30",
    "python-jose[cryptography]>=3.3",
    "livekit-api>=0.7",
    "tenacity>=9.0",
    "python-dotenv>=1.0",
    "orjson>=3.10",
    "websockets>=13.0",
]

[project.optional-dependencies]
# Native Cognee memory engine. Optional: the CogneeClient falls back to the
# REST API or in-memory mock when this isn't installed.
cognee = ["cognee>=1.1", "fastembed>=0.4"]
dev = ["pytest>=8.3", "pytest-asyncio>=0.24", "ruff>=0.7", "respx>=0.21"]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
